[package]
name = "eve_character_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["http1", "client"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "8.3.0" }
serde_json = { version = "1.0" }
